--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
   <section class="Projets">
     <table>
       <tr>
-        <td><img src="" alt="Calculatrice_screen"></td>
+        <td>
+          <p>Calculatrice</p>
         <td>
           <p>.NET WPF (C#)</p>
         </td>
@@ -97,23 +98,54 @@
             que le changement de signe ou encore le clear de l'affichage.</p>
         </td>
         <td>
-        <a href="https://github.com/SautiereQDev/Distributeur-de-billet.git">Lien GitHub</a>
+          <a href="https://github.com/SautiereQDev/Calculator"> Lien GitHub</a>
         </td>
-        </tr>
-        <tr>
-        <td><img src="" alt="Calculatrice_screen"></td>
+      </tr>
+      <tr>
+        <td>
+          <p>Triangle de Pascal</p>
+        </td>
+        <td>
+            <p>C</p>
+        </td>
+        <td>
+            <p>Programme modelisant dans un terminal un triangle de Pascal de taille pre-determinée par l'utilisateur.</p>
+        </td>
+        <td>
+          <a href="https://github.com/SautiereQDev/Triangle-de-Pascal">Lien GitHub</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Distributeur de billet</p>
         <td>
           <p>C++</p>
         </td>
         <td>
-          <p>Programme Console peremttant la distributiion de billets en fonction de l'argent entrée par l'utilisateur via le terminal et donc le but est de distribuer le plus petit nombre de billets.</p>
+          <p>Programme Console peremttant la distributiion de billets en fonction de l'argent entrée par l'utilisateur
+            via le terminal et donc le but est de distribuer le plus petit nombre de billets.</p>
         </td>
         <td>
-
+          <a href="https://github.com/SautiereQDev/Distributeur-de-billet.git">Lien GitHub</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Jeu du nombre juste</p>
+        </td>
+        <td>
+          <p>Assembleur (x86)</p>
+        </td>
+        <td>
+          <p>Jeu developpé en assembleur où il faut trouver le nombre juste entre 1 et 100.</p>
+        </td>
+        <td>
+          <a href="https://github.com/SautiereQDev/Le-nombre-juste">Lien GitHub</a>
         </td>
       </tr>
     </table>
   </section>
+  <div id="degrade-rose-orange"></div>
   <section class="Passions">
     <ul>
       <li>
