--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h2 class="collumn-title">Web App/Desktop App</h2>
       <hr class="title-separator">
       <ul class="comp_list">
-        <li>WPF (C#) + Win32</li>
+        <li>WPF (C#) + API Win32</li>
         <li>Qt5 (C++)</li>
         <li>WinForms (C#)</li>
         <li>C# SML (Jeux Video 2D)</li>
@@ -86,63 +86,73 @@
   </section>
   <div id="degrade-bleu-rose"></div>
   <section class="Projets">
-    <table>
-      <tr>
-        <td>
-          <p>Calculatrice</p>
-        <td>
-          <p>.NET WPF (C#)</p>
-        </td>
-        <td>
-          <p>Programme reprenant l'interface de l'application native sous Windows et permettant des actions avancées tel
-            que le changement de signe ou encore le clear de l'affichage.</p>
-        </td>
-        <td>
-          <a href="https://github.com/SautiereQDev/Calculator"> Lien GitHub</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Triangle de Pascal</p>
-        </td>
-        <td>
+    <table class="project_table">
+      <thead>
+        <tr>
+          <th colspan="4"> Mes projets : </th>
+        </tr>
+      </thead>
+      <tbody class="">
+        <tr>
+          <td>
+            <p>Calculatrice</p>
+          <td>
+            <p>.NET WPF (C#)</p>
+          </td>
+          <td class="descr_cell">
+            <p>Programme reprenant l'interface de l'application native sous Windows et permettant des actions avancées
+              tel
+              que le changement de signe ou encore le clear de l'affichage.</p>
+          </td>
+          <td>
+            <a href="https://github.com/SautiereQDev/Calculator"> Lien GitHub</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Triangle de Pascal</p>
+          </td>
+          <td>
             <p>C</p>
-        </td>
-        <td>
-            <p>Programme modelisant dans un terminal un triangle de Pascal de taille pre-determinée par l'utilisateur.</p>
-        </td>
-        <td>
-          <a href="https://github.com/SautiereQDev/Triangle-de-Pascal">Lien GitHub</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Distributeur de billet</p>
-        <td>
-          <p>C++</p>
-        </td>
-        <td>
-          <p>Programme Console peremttant la distributiion de billets en fonction de l'argent entrée par l'utilisateur
-            via le terminal et donc le but est de distribuer le plus petit nombre de billets.</p>
-        </td>
-        <td>
-          <a href="https://github.com/SautiereQDev/Distributeur-de-billet.git">Lien GitHub</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Jeu du nombre juste</p>
-        </td>
-        <td>
-          <p>Assembleur (x86)</p>
-        </td>
-        <td>
-          <p>Jeu developpé en assembleur où il faut trouver le nombre juste entre 1 et 100.</p>
-        </td>
-        <td>
-          <a href="https://github.com/SautiereQDev/Le-nombre-juste">Lien GitHub</a>
-        </td>
-      </tr>
+          </td>
+          <td class="descr_cell">
+            <p>Programme modelisant dans un terminal un triangle de Pascal de taille pre-determinée par l'utilisateur.
+            </p>
+          </td>
+          <td>
+            <a href="https://github.com/SautiereQDev/Triangle-de-Pascal">Lien GitHub</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Distributeur de billet</p>
+          <td>
+            <p>C++</p>
+          </td>
+          <td class="descr_cell">
+            <p>Programme Console peremettant la distributiion de billets en fonction de l'argent entrée par
+              l'utilisateur
+              via le terminal et donc le but est de distribuer le plus petit nombre de billets.</p>
+          </td>
+          <td>
+            <a href="https://github.com/SautiereQDev/Distributeur-de-billet.git">Lien GitHub</a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <p>Jeu du nombre juste</p>
+          </td>
+          <td>
+            <p>Assembleur (x86)</p>
+          </td>
+          <td class="descr_cell">
+            <p>Jeu developpé en assembleur où l'objectif est de trouver le nombre juste entre 1 et 100.</p>
+          </td>
+          <td>
+            <a href="https://github.com/SautiereQDev/Le-nombre-juste">Lien GitHub</a>
+          </td>
+        </tr>
+      </tbody>
     </table>
   </section>
   <div id="degrade-rose-orange"></div>
