--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font\stylesheet.css">
-  <title>Quentin Sautiere Web Site</title>
-  <div class="navbar">
-    <nav>
-      <ul>
-        <h2 id="title">Quentin Sautiere</h2>
-        <div class=" nav_link">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Contact</a></li>
-        </div>
-      </ul>
-    </nav>
-  </div>
+  <title>Quentin Sautière Web Site</title>
 </head>
 
 <body>
@@ -41,13 +28,13 @@
       </tr>
       <tr>
         <td>Filière :</td>
-        <td>Génerale</td>
+        <td>Generale</td>
       </tr>
       <tr>
-        <td>Specialité :</td>
+        <td>Spécialité :</td>
         <td><span class="underline">Maths,
             Physique-Chimie, </span>Science de
-          l'ingenieur</td>
+          l’ingénieur</td>
       </tr>
     </table>
     </div>
@@ -92,10 +79,10 @@
           <th colspan="4"> Mes projets : </th>
         </tr>
       </thead>
-      <tbody class="">
+      <tbody>
         <tr>
-          <td>
-            <p>Calculatrice</p>
+          <td class="title_cell">
+            <p class="proj_title">Calculatrice</p>
           <td>
             <p>.NET WPF (C#)</p>
           </td>
@@ -109,14 +96,14 @@
           </td>
         </tr>
         <tr>
-          <td>
-            <p>Triangle de Pascal</p>
+          <td class="title_cell">
+            <p class="proj_title">Triangle de Pascal</p>
           </td>
           <td>
             <p>C</p>
-          </td>
+          </td class="title_cell">
           <td class="descr_cell">
-            <p>Programme modelisant dans un terminal un triangle de Pascal de taille pre-determinée par l'utilisateur.
+            <p>Programme modélisant dans un terminal un triangle de Pascal de taille pré-déterminée par l'utilisateur.
             </p>
           </td>
           <td>
@@ -124,13 +111,13 @@
           </td>
         </tr>
         <tr>
-          <td>
-            <p>Distributeur de billet</p>
+          <td class="title_cell">
+            <p class="proj_title">Distributeur de billet</p>
           <td>
             <p>C++</p>
           </td>
           <td class="descr_cell">
-            <p>Programme Console peremettant la distributiion de billets en fonction de l'argent entrée par
+            <p>Programme Console permettant la distribution de billets en fonction de l'argent entrée par
               l'utilisateur
               via le terminal et donc le but est de distribuer le plus petit nombre de billets.</p>
           </td>
@@ -139,14 +126,14 @@
           </td>
         </tr>
         <tr>
-          <td>
-            <p>Jeu du nombre juste</p>
+          <td class="title_cell">
+            <p class="proj_title">Jeu du nombre juste</p>
           </td>
           <td>
             <p>Assembleur (x86)</p>
           </td>
           <td class="descr_cell">
-            <p>Jeu developpé en assembleur où l'objectif est de trouver le nombre juste entre 1 et 100.</p>
+            <p>Jeu développé en assembleur où l'objectif est de trouver le nombre juste entre 1 et 100.</p>
           </td>
           <td>
             <a href="https://github.com/SautiereQDev/Le-nombre-juste">Lien GitHub</a>
@@ -160,26 +147,52 @@
     <ul>
       <li>
         <h3>Course à pied : </h3>
-        <p>Je pratique la course à pied en club et en compétition à hateur d'un entrainement par jour à la VGA Saint
-          Maur. Mes distances favorites sont le 1500m et le 3000m mais j'aime bien sortir de ma zonne de confort en
+        <p>Je pratique la course à pied <strong>en club</strong> et <strong>en compétition</strong> à hauteur
+          d'<strong>un entrainement par jour</strong> à la VGA Saint
+          Maur. Mes distances favorites sont le 1500m et le 3000m mais j'aime bien sortir de ma zone de confort en
           pratiquant le 800m et le 5000m lorsque l'occasion ce présente.
           J'ai un record au <strong>10km en 36min, 4min34s au 1500m et 10min09s au 3000m</strong>, toutes ces
-          performances ont été réalisés en 2022 et je compte bien faire mieux pour cette année !
+          performances ont été réalisés en 2022 et je compte bien faire encore mieux pour cette année !
+        </p>
+      </li>
+      <h3>Informatique : </h3>
+      <p>L'Informatique est depuis plusieurs années une vrai passion, j'aime <strong>découvrir de nouvelles
+          technologies</strong>, de
+        nouveaux domaines, de nouvelles façon de faire. Il est pour moi très relaxant de développer un programme
+        Informatique car cela me pousse à réfléchir et je suis d'autant plus content lorsque le développement du
+        programme arrive à son terme. Le domaine qui m'attire le plus dans l'Informatique est le <strong>développement
+          de
+          logiciel sur PC</strong> car cela concentre différents domaines de l'Informatique tel que la gestion des
+        ressources
+        matérielles, la gestion de DB ou encore le développement d'interfaces UI/UX</p>
+      <li>
+        <h3>Voile : </h3>
+        <p>Depuis près de <strong>10 ans</strong>, à l'occasion de mes vacances d'été à l'ile d'Oléron, je navigue en
+          catamaran au <strong>Wind
+            Oléron Club</strong>, j'ai acquis un niveau <strong>FFV Niv 3</strong> l'été derniers, je compte d’ailleurs
+          passer mon monitora cet été afin de
+          devenir moniteur dès l'été prochains au WOC. La voile est pour moi un moyen de me rapprocher de la nature en
+          comprenant les variations météo, de courant et de comprend l'influence de ces derniers sur le bateau.</p>
+      </li>
+      <li>
+        <h3>Randonnée :</h3>
+        <p>
+          Descendant d'une famille savoyarde, la randonnée occupe donc une grande place dans ma famille, j'aime
+          découvrir de nous espaces, de nouvelles montagnes, me dépasser physiquement tout en passant de bons moments en
+          compagnie des membres de ma famille. Durant l'été 2021 et 2022, avec mon père nous avons parcourus le
+          <strong>GR20 en Corse</strong> considéré comme le plus dur d'Europe.
         </p>
       </li>
       <li>
-        <div class="Informatique"></div>
-        <div class="catamaran"></div>
-        <div class="Randonnée"></div>
-        <div class="Escalade"></div>
-        <div class="Physique-Chimie"></div>
-      </li>
-      <li>
-
+        <h3>Musique :</h3>
+        <p>
+          La musique occupe une place très importante dans mon quotidien, elle m'aide à me concentrer, à réfléchir.
+          J'aime découvrir de nouveaux style de musique ou de nouveaux artistes. J'écoute principalement de la variété,
+          de la musique électronique ou encore du RAP mais je sus ouvert à tout les styles musicaux.
+        </p>
       </li>
     </ul>
     </div>
-
   </section>
 </body>
 
