--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font\stylesheet.css">
+  <link rel="stylesheet" href="font\stylesheet (1).css">
   <title>Quentin Sautière Web Site</title>
+  <nav class="navbar">
+    <div class="logo">Quentin Sautière</div>
+    <ul class="nav-links">
+      <div class="menu">
+        <a href="#Presentation">Infos personnelles</a>
+        <a href="#Competences">Compétences</a>
+        <a href="#Projets">Projets</a>
+        <a href="#Passions">Mes passions</a>
+      </div>
+    </ul>
+  </nav>
 </head>
 
 <body>
-  <section class="Presentation">
+  <section id="Presentation">
     <h2 class="section-title">A propos de moi : </h2>
     <img id="pp" src="/home/quentinsautiere/Documents/Workspace/Web/Portfoliosup/images/Quentin.png"
       alt="profile-picture">
@@ -40,7 +52,7 @@
     </div>
   </section>
   <div class="transition" id="degrade-jaune-bleu"></div>
-  <section class="Competences">
+  <section id="Competences">
     <div class="Web_comp">
       <h2 class="collumn-title">Front-End/Back-End</h2>
       <hr class="title-separator">
@@ -72,7 +84,7 @@
       </ul>
   </section>
   <div id="degrade-bleu-rose"></div>
-  <section class="Projets">
+  <section id="Projets">
     <table class="project_table">
       <thead>
         <tr>
@@ -92,7 +104,10 @@
               que le changement de signe ou encore le clear de l'affichage.</p>
           </td>
           <td>
-            <a href="https://github.com/SautiereQDev/Calculator"> Lien GitHub</a>
+            <a href="https://github.com/SautiereQDev/Calculator">
+              <!--<img src="images/github.png" alt="github"> -->
+                Lien Github
+            </a>
           </td>
         </tr>
         <tr>
@@ -143,7 +158,7 @@
     </table>
   </section>
   <div id="degrade-rose-orange"></div>
-  <section class="Passions">
+  <section id="Passions">
     <ul>
       <li>
         <h3>Course à pied : </h3>
@@ -188,7 +203,7 @@
         <p>
           La musique occupe une place très importante dans mon quotidien, elle m'aide à me concentrer, à réfléchir.
           J'aime découvrir de nouveaux style de musique ou de nouveaux artistes. J'écoute principalement de la variété,
-          de la musique électronique ou encore du RAP mais je sus ouvert à tout les styles musicaux.
+          de la musique électronique ou encore du rap mais je sus ouvert à tout les styles musicaux.
         </p>
       </li>
     </ul>
