--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       </tr>
       <tr>
         <td>Filière :</td>
-        <td>Generale</td>
+        <td>Générale</td>
       </tr>
       <tr>
         <td>Spécialité :</td>
         <td><span class="underline">Maths,
-            Physique-Chimie, </span>Science de
+            Physique-Chimie</span>, Science de
           l’ingénieur</td>
       </tr>
     </table>
@@ -55,7 +55,6 @@
   <section id="Competences">
     <div class="Web_comp">
       <h2 class="collumn-title">Front-End/Back-End</h2>
-      <hr class="title-separator">
       <ul class="comp_list">
         <li>Javascript Natif</li>
         <li>Vue.js & React (JS)</li>
@@ -65,7 +64,6 @@
     </div>
     <div class="App_comp">
       <h2 class="collumn-title">Web App/Desktop App</h2>
-      <hr class="title-separator">
       <ul class="comp_list">
         <li>WPF (C#) + API Win32</li>
         <li>Qt5 (C++)</li>
@@ -75,10 +73,9 @@
     </div>
     <div class="Console_comp">
       <h2 class="collumn-title">Console App/Algorithm</h2>
-      <hr class="title-separator">
       <ul class="comp_list">
         <li> C++ Algorithmes (STL)</li>
-        <li>C++ Traitement de fichiers externes (STL + SQLite)</li>
+        <li>C++ & SQL</li>
         <li>C# .NET avec APIs Web</li>
         <li>Assembleur Intel x86 </li>
       </ul>
@@ -105,8 +102,7 @@
           </td>
           <td>
             <a href="https://github.com/SautiereQDev/Calculator">
-              <!--<img src="images/github.png" alt="github"> -->
-                Lien Github
+              <img src="images/github.jpg" alt="github">
             </a>
           </td>
         </tr>
@@ -122,7 +118,8 @@
             </p>
           </td>
           <td>
-            <a href="https://github.com/SautiereQDev/Triangle-de-Pascal">Lien GitHub</a>
+            <a href="https://github.com/SautiereQDev/Triangle-de-Pascal"> <img src="images/github.jpg" alt="github">
+            </a>
           </td>
         </tr>
         <tr>
@@ -137,7 +134,9 @@
               via le terminal et donc le but est de distribuer le plus petit nombre de billets.</p>
           </td>
           <td>
-            <a href="https://github.com/SautiereQDev/Distributeur-de-billet.git">Lien GitHub</a>
+            <a href="https://github.com/SautiereQDev/Distributeur-de-billet.git">
+              <img src="images/github.jpg" alt="github">
+            </a>
           </td>
         </tr>
         <tr>
@@ -151,7 +150,9 @@
             <p>Jeu développé en assembleur où l'objectif est de trouver le nombre juste entre 1 et 100.</p>
           </td>
           <td>
-            <a href="https://github.com/SautiereQDev/Le-nombre-juste">Lien GitHub</a>
+            <a href="https://github.com/SautiereQDev/Le-nombre-juste">
+              <img src="images/github.jpg" alt="github">
+            </a>
           </td>
         </tr>
       </tbody>
@@ -210,6 +211,11 @@
     </div>
   </section>
 </body>
+<hr>
+<footer>
+  <a href="mailto:sautiereq@gmail.com"><img src="images/envelope.png" alt="M'envoyer un mail"></img></a>
+  <a href="https://github.com/SautiereQDev"><img src="images/github.jpg" alt="lien github"></a>
+</footer>
 
 
 </html>
