fix img src bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <section id="Presentation">
     <h2 class="section-title">A propos de moi : </h2>
-    <img id="pp" src="/home/quentinsautiere/Documents/Workspace/Web/Portfoliosup/images/Quentin.png"
+    <img id="pp" src="images/Quentin.png"
       alt="profile-picture">
     <table class="about_me_tab">
       <tr>
