trying to make the page responsibe for Mobile

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <body>
   <section id="Presentation">
     <h2 class="section-title">A propos de moi : </h2>
-    <img id="pp" src="images/Quentin.png"
-      alt="profile-picture">
+    <img id="pp" src="images/Quentin.png" alt="profile-picture">
     <table class="about_me_tab">
       <tr>
         <td>Date de naissance : </td>
@@ -57,7 +56,6 @@
       <h2 class="collumn-title">Front-End/Back-End</h2>
       <ul class="comp_list">
         <li>Javascript Natif</li>
-        <li>Vue.js & React (JS)</li>
         <li>Node.js </li>
         <li>Bootstrap (CSS + HTML)</li>
       </ul>
@@ -68,13 +66,11 @@
         <li>WPF (C#) + API Win32</li>
         <li>Qt5 (C++)</li>
         <li>WinForms (C#)</li>
-        <li>C# SML (Jeux Video 2D)</li>
       </ul>
     </div>
     <div class="Console_comp">
       <h2 class="collumn-title">Console App/Algorithm</h2>
       <ul class="comp_list">
-        <li> C++ Algorithmes (STL)</li>
         <li>C++ & SQL</li>
         <li>C# .NET avec APIs Web</li>
         <li>Assembleur Intel x86 </li>
@@ -102,6 +98,23 @@
           </td>
           <td>
             <a href="https://github.com/SautiereQDev/Calculator">
+              <img src="images/github.jpg" alt="github">
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <td class="title_cell">
+            <p class="proj_title">Snake</p>
+          <td>
+            <p>
+              Javascript
+            </p>
+          </td>
+          <td class="descr_cell">
+            <p>Jeu du snake en Javascript avec controle clavier et gestion d'erreur.</p>
+          </td>
+          <td>
+            <a href="https://github.com/SautiereQDev/Snake">
               <img src="images/github.jpg" alt="github">
             </a>
           </td>
