--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="font\stylesheet.css">
   <link rel="stylesheet" href="font\stylesheet (1).css">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">
   <title>Quentin Sautière Web Site</title>
   <nav class="navbar">
     <div class="logo">Quentin Sautière</div>
@@ -22,7 +23,7 @@
 
 <body>
   <section id="Presentation">
-    <h2 class="section-title">A propos de moi : </h2>
+    <h2 class="section-title"><u>A propos de moi : </u></h2>
     <img id="pp" src="images/Quentin.png" alt="profile-picture">
     <table class="about_me_tab">
       <tr>
@@ -43,17 +44,25 @@
       </tr>
       <tr>
         <td>Spécialité :</td>
-        <td><span class="underline">Maths,
-            Physique-Chimie</span>, Science de
+        <td><u>Maths,
+            Physique-Chimie</u>, Science de
           l’ingénieur</td>
       </tr>
     </table>
-    </div>
+      <p>
+        Depuis la 4ème, je me suis pris de passion pour l'informatique, dans un premier temps, j'ai cherché à comprend
+        le fonctionement d'un ordinateur à l'échelle microscopique d'où mes projets réalisés en Assembleur me permettant
+        ainsi d'acceder directement au processeur. Par la suite je me suis interessé à la creéation d'application pour
+        ordinateur en passant par les jeux vidéo en C++ via Unreal Engine. Lors de mon apprenssige de la techonlogie
+        .NET WPF j'ai été amené à developper mes connaissances en Web ce qui m'a poussé à appronfondir mes compétences
+        notament via l'usage d'API ou encore de Javascript que je tente actuellement d'inclure dans mes pages web. Mon
+        objectif à long terme est de devenir developpeur d'application pour ordinateur.
+      </p>
   </section>
   <div class="transition" id="degrade-jaune-bleu"></div>
   <section id="Competences">
     <div class="Web_comp">
-      <h2 class="collumn-title">Front-End/Back-End</h2>
+      <h2 class="collumn-title"><u>Front-End/Back-End</u></h2>
       <ul class="comp_list">
         <li>Javascript Natif</li>
         <li>Node.js </li>
@@ -61,7 +70,7 @@
       </ul>
     </div>
     <div class="App_comp">
-      <h2 class="collumn-title">Web App/Desktop App</h2>
+      <h2 class="collumn-title"><u>Web App/Desktop App</u></h2>
       <ul class="comp_list">
         <li>WPF (C#) + API Win32</li>
         <li>Qt5 (C++)</li>
@@ -69,7 +78,7 @@
       </ul>
     </div>
     <div class="Console_comp">
-      <h2 class="collumn-title">Console App/Algorithm</h2>
+      <h2 class="collumn-title"><u>Console App/Algorithm</u></h2>
       <ul class="comp_list">
         <li>C++ & SQL</li>
         <li>C# .NET avec APIs Web</li>
@@ -87,7 +96,7 @@
       <tbody>
         <tr>
           <td class="title_cell">
-            <p class="proj_title">Calculatrice</p>
+            <p class="proj_title"><strong>Calculatrice</strong></p>
           <td>
             <p>.NET WPF (C#)</p>
           </td>
@@ -104,7 +113,7 @@
         </tr>
         <tr>
           <td class="title_cell">
-            <p class="proj_title">Snake</p>
+            <p class="proj_title"><strong>Snake</strong></p>
           <td>
             <p>
               Javascript
@@ -121,7 +130,7 @@
         </tr>
         <tr>
           <td class="title_cell">
-            <p class="proj_title">Triangle de Pascal</p>
+            <p class="proj_title"><strong>Triangle de Pascal</strong></p>
           </td>
           <td>
             <p>C</p>
@@ -137,7 +146,7 @@
         </tr>
         <tr>
           <td class="title_cell">
-            <p class="proj_title">Distributeur de billet</p>
+            <p class="proj_title"><strong>Distributeur de billet</strong></p>
           <td>
             <p>C++</p>
           </td>
@@ -154,7 +163,7 @@
         </tr>
         <tr>
           <td class="title_cell">
-            <p class="proj_title">Jeu du nombre juste</p>
+            <p class="proj_title"><strong>Jeu du nombre juste</strong></p>
           </td>
           <td>
             <p>Assembleur (x86)</p>
@@ -175,7 +184,7 @@
   <section id="Passions">
     <ul>
       <li>
-        <h3>Course à pied : </h3>
+        <h3><u>Course à pied : </u></h3>
         <p>Je pratique la course à pied <strong>en club</strong> et <strong>en compétition</strong> à hauteur
           d'<strong>un entrainement par jour</strong> à la VGA Saint
           Maur. Mes distances favorites sont le 1500m et le 3000m mais j'aime bien sortir de ma zone de confort en
@@ -184,7 +193,7 @@
           performances ont été réalisés en 2022 et je compte bien faire encore mieux pour cette année !
         </p>
       </li>
-      <h3>Informatique : </h3>
+      <h3><u>Informatique : </u></h3>
       <p>L'Informatique est depuis plusieurs années une vrai passion, j'aime <strong>découvrir de nouvelles
           technologies</strong>, de
         nouveaux domaines, de nouvelles façon de faire. Il est pour moi très relaxant de développer un programme
@@ -195,7 +204,7 @@
         ressources
         matérielles, la gestion de DB ou encore le développement d'interfaces UI/UX</p>
       <li>
-        <h3>Voile : </h3>
+        <h3><u>Voile : </u></h3>
         <p>Depuis près de <strong>10 ans</strong>, à l'occasion de mes vacances d'été à l'ile d'Oléron, je navigue en
           catamaran au <strong>Wind
             Oléron Club</strong>, j'ai acquis un niveau <strong>FFV Niv 3</strong> l'été derniers, je compte d’ailleurs
@@ -204,7 +213,7 @@
           comprenant les variations météo, de courant et de comprend l'influence de ces derniers sur le bateau.</p>
       </li>
       <li>
-        <h3>Randonnée :</h3>
+        <h3><u>Randonnée :</u></h3>
         <p>
           Descendant d'une famille savoyarde, la randonnée occupe donc une grande place dans ma famille, j'aime
           découvrir de nous espaces, de nouvelles montagnes, me dépasser physiquement tout en passant de bons moments en
@@ -213,7 +222,7 @@
         </p>
       </li>
       <li>
-        <h3>Musique :</h3>
+        <h3><u>Musique :</u></h3>
         <p>
           La musique occupe une place très importante dans mon quotidien, elle m'aide à me concentrer, à réfléchir.
           J'aime découvrir de nouveaux style de musique ou de nouveaux artistes. J'écoute principalement de la variété,
