--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           l’ingénieur</td>
       </tr>
     </table>
+    <hr noshade>
       <p>
         Depuis la 4ème, je me suis pris de passion pour l'informatique, dans un premier temps, j'ai cherché à comprend
         le fonctionement d'un ordinateur à l'échelle microscopique d'où mes projets réalisés en Assembleur me permettant
@@ -188,7 +189,7 @@
         <p>Je pratique la course à pied <strong>en club</strong> et <strong>en compétition</strong> à hauteur
           d'<strong>un entrainement par jour</strong> à la VGA Saint
           Maur. Mes distances favorites sont le 1500m et le 3000m mais j'aime bien sortir de ma zone de confort en
-          pratiquant le 800m et le 5000m lorsque l'occasion ce présente.
+          pratthiquant le 800m et le 5000m lorsque l'occasion ce présente.
           J'ai un record au <strong>10km en 36min, 4min34s au 1500m et 10min09s au 3000m</strong>, toutes ces
           performances ont été réalisés en 2022 et je compte bien faire encore mieux pour cette année !
         </p>
