--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul class="nav-links">
       <div class="menu">
         <a href="#Presentation">Infos personnelles</a>
-        <a href="#Competences">Compétences</a>
+        <a href="#Compete225pxnces">Compétences</a>
         <a href="#Projets">Projets</a>
         <a href="#Passions">Mes passions</a>
       </div>
@@ -23,9 +23,9 @@
 
 <body>
   <section id="Presentation">
-    <h2 class="section-title"><u>A propos de moi : </u></h2>
+    <h2><u>A propos de moi : </u></h2>
     <img id="pp" src="images/Quentin.png" alt="profile-picture">
-    <table class="about_me_tab">
+    <table id="about_me_tab">
       <tr>
         <td>Date de naissance : </td>
         <td>26 Décembre 2005</td>
@@ -64,7 +64,7 @@
   <section id="Competences">
     <div class="Web_comp">
       <h2 class="collumn-title"><u>Front-End/Back-End</u></h2>
-      <ul class="comp_list">
+      <ul>
         <li>Javascript Natif</li>
         <li>Node.js </li>
         <li>Bootstrap (CSS + HTML)</li>
@@ -72,7 +72,7 @@
     </div>
     <div class="App_comp">
       <h2 class="collumn-title"><u>Web App/Desktop App</u></h2>
-      <ul class="comp_list">
+      <ul>
         <li>WPF (C#) + API Win32</li>
         <li>Qt5 (C++)</li>
         <li>WinForms (C#)</li>
@@ -80,7 +80,7 @@
     </div>
     <div class="Console_comp">
       <h2 class="collumn-title"><u>Console App/Algorithm</u></h2>
-      <ul class="comp_list">
+      <ul>
         <li>C++ & SQL</li>
         <li>C# .NET avec APIs Web</li>
         <li>Assembleur Intel x86 </li>
