--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul class="nav-links">
       <div class="menu">
         <a href="#Presentation">Infos personnelles</a>
-        <a href="#Compete225pxnces">Compétences</a>
+        <a href="#Competences">Compétences</a>
         <a href="#Projets">Projets</a>
         <a href="#Passions">Mes passions</a>
       </div>
