--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="font\stylesheet.css">
-  <link rel="stylesheet" href="font\stylesheet (1).css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">
   <title>Quentin Sautière Web Site</title>
   <nav class="navbar">
@@ -35,7 +33,7 @@
         <td>Saint Maur des Fossés</td>
       </tr>
       <tr>
-        <td>Lycee d'affectation : </td>
+        <td>Lycée d'affectation : </td>
         <td>Condorcet (Saint Maur)</td>
       </tr>
       <tr>
@@ -49,15 +47,15 @@
           l’ingénieur</td>
       </tr>
     </table>
-    <hr noshade>
+    <hr>
     <p>
-      Depuis la 4ème, je me suis pris de passion pour l'informatique, dans un premier temps, j'ai cherché à comprend
-      le fonctionement d'un ordinateur à l'échelle microscopique d'où mes projets réalisés en Assembleur me permettant
-      ainsi d'acceder directement au processeur. Par la suite je me suis interessé à la creéation d'application pour
-      ordinateur en passant par les jeux vidéo en C++ via Unreal Engine. Lors de mon apprenssige de la techonlogie
-      .NET WPF j'ai été amené à developper mes connaissances en Web ce qui m'a poussé à appronfondir mes compétences
-      notament via l'usage d'API ou encore de Javascript que je tente actuellement d'inclure dans mes pages web. Mon
-      objectif à long terme est de devenir developpeur d'application pour ordinateur.
+      Depuis la 4ᵉ, je me suis pris de passion pour l'informatique, dans un premier temps, j'ai cherché à comprendre
+      le fonctionnement d'un ordinateur à l'échelle microscopique d'où mes projets réalisés en Assembleur me permettant
+      ainsi d'accéder directement au processeur. Par la suite, je me suis interest à la création d'application pour
+      ordinateur en passant par les jeux vidéo en C++ via Unreal Engine. Lors de mon apprentissage de la technologie
+      .NET WPF, j'ai été amené à developer mes connaissances en Web ce qui m'a poussé à approfondir mes compétences
+      notamment via l'usage d'API ou encore de Javascript que je tente actuellement d'inclure dans mes pages web. Mon
+      objectif à long terme est de devenir developer d'application pour ordinateur.
     </p>
   </section>
   <div class="transition" id="degrade-jaune-bleu"></div>
@@ -85,6 +83,7 @@
         <li>C# .NET avec APIs Web</li>
         <li>Assembleur Intel x86 </li>
       </ul>
+    </div>
   </section>
   <div id="degrade-bleu-rose"></div>
   <section id="Projets">
@@ -103,7 +102,7 @@
           </td>
           <td class="descr_cell">
             <p>Programme reprenant l'interface de l'application native sous Windows et permettant des actions avancées
-              tel
+              telles
               que le changement de signe ou encore le clear de l'affichage.</p>
           </td>
           <td>
@@ -135,7 +134,7 @@
           </td>
           <td>
             <p>C</p>
-          </td class="title_cell">
+          </td>
           <td class="descr_cell">
             <p>Programme modélisant dans un terminal un triangle de Pascal de taille pré-déterminée par l'utilisateur.
             </p>
@@ -189,20 +188,20 @@
         <p>Je pratique la course à pied <strong>en club</strong> et <strong>en compétition</strong> à hauteur
           d'<strong>un entrainement par jour</strong> à la VGA Saint
           Maur. Mes distances favorites sont le 1500m et le 3000m mais j'aime bien sortir de ma zone de confort en
-          pratthiquant le 800m et le 5000m lorsque l'occasion ce présente.
+          pratiquant le 800m et le 5000m lorsque l'occasion se présente.
           J'ai un record au <strong>10km en 36min, 4min34s au 1500m et 10min09s au 3000m</strong>, toutes ces
           performances ont été réalisés en 2022 et je compte bien faire encore mieux pour cette année !
         </p>
       </li>
       <li>
         <h3><u>Informatique : </u></h3>
-        <p>L'Informatique est depuis plusieurs années une vrai passion, j'aime <strong>découvrir de nouvelles
+        <p>L'Informatique est depuis plusieurs années une veritable passion, j'aime <strong>découvrir de nouvelles
             technologies</strong>, de
-          nouveaux domaines, de nouvelles façon de faire. Il est pour moi très relaxant de développer un programme
-          Informatique car cela me pousse à réfléchir et je suis d'autant plus content lorsque le développement du
+          nouveaux domaines, de nouvelles façons de faire. Il est pour moi très relaxant de développer un programme
+          Informatique, cela me pousse à réfléchir et je suis d'autant plus content lorsque le développement du
           programme arrive à son terme. Le domaine qui m'attire le plus dans l'Informatique est le <strong>développement
             de
-            logiciel sur PC</strong> car cela concentre différents domaines de l'Informatique tel que la gestion des
+            logiciel sur PC</strong> car cela concentre différents domaines de l'Informatique telle que la gestion des
           ressources
           matérielles, la gestion de DB ou encore le développement d'interfaces UI/UX</p>
       </li>
@@ -210,17 +209,17 @@
         <h3><u>Voile : </u></h3>
         <p>Depuis près de <strong>10 ans</strong>, à l'occasion de mes vacances d'été à l'ile d'Oléron, je navigue en
           catamaran au <strong>Wind
-            Oléron Club</strong>, j'ai acquis un niveau <strong>FFV Niv 3</strong> l'été derniers, je compte d’ailleurs
+            Oléron Club</strong>, j'ai acquis un niveau <strong>FFV Niv 3</strong> l'été dernier, je compte d’ailleurs
           passer mon monitora cet été afin de
           devenir moniteur dès l'été prochains au WOC. La voile est pour moi un moyen de me rapprocher de la nature en
-          comprenant les variations météo, de courant et de comprend l'influence de ces derniers sur le bateau.</p>
+          comprenant les variations météo, de courant et de comprendre l'influence de ces derniers sur le bateau.</p>
       </li>
       <li>
         <h3><u>Randonnée :</u></h3>
         <p>
           Descendant d'une famille savoyarde, la randonnée occupe donc une grande place dans ma famille, j'aime
           découvrir de nous espaces, de nouvelles montagnes, me dépasser physiquement tout en passant de bons moments en
-          compagnie des membres de ma famille. Durant l'été 2021 et 2022, avec mon père nous avons parcourus le
+          compagnie des membres de ma famille. Durant l'été 2021 et 2022, accompagné de mon père, nous avons parcouru le
           <strong>GR20 en Corse</strong> considéré comme le plus dur d'Europe.
         </p>
       </li>
@@ -228,8 +227,8 @@
         <h3><u>Musique :</u></h3>
         <p>
           La musique occupe une place très importante dans mon quotidien, elle m'aide à me concentrer, à réfléchir.
-          J'aime découvrir de nouveaux style de musique ou de nouveaux artistes. J'écoute principalement de la variété,
-          de la musique électronique ou encore du rap mais je sus ouvert à tout les styles musicaux.
+          J'aime découvrir de nouveaux styles de musique ou de nouveaux artistes. J'écoute principalement de la variété,
+          de la musique électronique ou encore du rap mais je sus ouvert à tous les genres musicaux.
         </p>
       </li>
     </ul>
